use experimental launch optimization

--- a/recipes/dicl/dicl.ipynb
+++ b/recipes/dicl/dicl.ipynb
@@ -53,6 +53,9 @@
     "\n",
     "MAX_EXAMPLES = 1000\n",
     "\n",
+    "# The name of the variant to use to grab the templates used for fine-tuning\n",
+    "TEMPLATE_VARIANT_NAME = \"gpt_4o_mini\"\n",
+    "\n",
     "# The name of the DICL variant you will want to use. Set this to a meaningful name that does not conflict\n",
     "# with other variants for the function selected above.\n",
     "DICL_VARIANT_NAME = \"gpt_4o_mini_dicl\"\n",
@@ -81,37 +84,38 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from asyncio import Semaphore\n",
     "\n",
-    "import pandas as pd\n",
     "import toml\n",
-    "from clickhouse_connect import get_client\n",
-    "from openai import AsyncOpenAI\n",
-    "from tensorzero import TensorZeroGateway\n",
-    "from tensorzero.util import uuid7\n",
-    "from tqdm.asyncio import tqdm_asyncio"
+    "from tensorzero import DiclOptimizationConfig, TensorZeroGateway"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "91be3cd0",
+   "id": "cf141ac4",
    "metadata": {},
    "source": [
-    "Initialize the ClickHouse client.\n"
+    "If you haven't, also include the embedding model in the config.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64acef04",
+   "id": "ca57e4ba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert \"TENSORZERO_CLICKHOUSE_URL\" in os.environ, (\n",
-    "    \"TENSORZERO_CLICKHOUSE_URL environment variable not set\"\n",
-    ")\n",
+    "embedding_model_config = {\n",
+    "    \"embedding_models\": {\n",
+    "        DICL_EMBEDDING_MODEL: {\n",
+    "            \"routing\": [\"openai\"],\n",
+    "            \"providers\": {\n",
+    "                \"openai\": {\"type\": \"openai\", \"model_name\": DICL_EMBEDDING_MODEL}\n",
+    "            },\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
     "\n",
-    "clickhouse_client = get_client(dsn=os.environ[\"TENSORZERO_CLICKHOUSE_URL\"])"
+    "print(toml.dumps(embedding_model_config))"
    ]
   },
   {
@@ -158,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inferences = t0.experimental_list_inferences(\n",
+    "stored_inferences = t0.experimental_list_inferences(\n",
     "    function_name=FUNCTION_NAME,\n",
     "    filters=filters,\n",
     "    output_source=\"demonstration\",\n",
@@ -172,118 +176,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc0283b6",
+   "id": "8f52bf21",
    "metadata": {},
    "outputs": [],
    "source": [
-    "openai_client = AsyncOpenAI()"
+    "rendered_samples = t0.experimental_render_samples(\n",
+    "    stored_samples=stored_inferences,\n",
+    "    variants={FUNCTION_NAME: TEMPLATE_VARIANT_NAME},\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb9f7db6",
+   "id": "2f48e27a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def get_embedding(\n",
-    "    text: str, semaphore: Semaphore, model: str = \"text-embedding-3-small\"\n",
-    ") -> Optional[list[float]]:\n",
-    "    try:\n",
-    "        async with semaphore:\n",
-    "            response = await openai_client.embeddings.create(input=text, model=model)\n",
-    "            return response.data[0].embedding\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error getting embedding: {e}\")\n",
-    "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a610f745",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MAX_CONCURRENT_EMBEDDING_REQUESTS = 50\n",
-    "semaphore = Semaphore(MAX_CONCURRENT_EMBEDDING_REQUESTS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d53bf6ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Embed the 'input' column using the get_embedding function\n",
-    "tasks = [\n",
-    "    get_embedding(str(inference.input), semaphore, DICL_EMBEDDING_MODEL)\n",
-    "    for inference in inferences\n",
-    "]\n",
-    "embeddings = await tqdm_asyncio.gather(*tasks, desc=\"Embedding inputs\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "245d25f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = []\n",
-    "for inference, embedding in zip(inferences, embeddings):\n",
-    "    data.append(\n",
-    "        {\n",
-    "            \"input\": str(inference.input),\n",
-    "            \"embedding\": embedding,\n",
-    "            \"function_name\": FUNCTION_NAME,\n",
-    "            \"variant_name\": DICL_VARIANT_NAME,\n",
-    "            \"id\": uuid7(),\n",
-    "        }\n",
-    "    )\n",
-    "example_df = pd.DataFrame(data)\n",
-    "example_df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "142a5284",
-   "metadata": {},
-   "source": [
-    "Prepare the data for the DynamicInContextLearningExample table\n",
-    "The table schema is as follows:\n",
-    "\n",
-    "```\n",
-    "CREATE TABLE tensorzero.DynamicInContextLearningExample\n",
-    "(\n",
-    "    `id` UUID,\n",
-    "    `function_name` LowCardinality(String),\n",
-    "    `variant_name` LowCardinality(String),\n",
-    "    `namespace` String,\n",
-    "    `input` String,\n",
-    "    `output` String,\n",
-    "    `embedding` Array(Float32),\n",
-    "    `timestamp` DateTime MATERIALIZED UUIDv7ToDateTime(id)\n",
+    "optimization_config = DiclOptimizationConfig(\n",
+    "    embedding_model=DICL_EMBEDDING_MODEL,\n",
+    "    variant_name=DICL_VARIANT_NAME,\n",
+    "    function_name=FUNCTION_NAME,\n",
+    "    k=DICL_K,\n",
+    "    model=DICL_GENERATION_MODEL,\n",
     ")\n",
-    "ENGINE = MergeTree\n",
-    "ORDER BY (function_name, variant_name, namespace)\n",
-    "```\n"
+    "job_handle = t0.experimental_launch_optimization(\n",
+    "    train_samples=rendered_samples,\n",
+    "    val_samples=None,\n",
+    "    optimization_config=optimization_config,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5edd73a1",
+   "id": "61a9e068",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert the data into the DiclExample table\n",
-    "result = clickhouse_client.insert_df(\n",
-    "    \"DynamicInContextLearningExample\",\n",
-    "    example_df,\n",
-    ")\n",
-    "print(result)"
+    "job_info = t0.experimental_poll_optimization(job_handle=job_handle)"
    ]
   },
   {
@@ -306,46 +237,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "variant_config = {\n",
-    "    \"type\": \"experimental_dynamic_in_context_learning\",\n",
-    "    \"embedding_model\": DICL_EMBEDDING_MODEL,\n",
-    "    \"model\": DICL_GENERATION_MODEL,\n",
-    "    \"k\": DICL_K,\n",
-    "}\n",
     "full_variant_config = {\n",
-    "    \"functions\": {FUNCTION_NAME: {\"variants\": {DICL_VARIANT_NAME: variant_config}}}\n",
-    "}\n",
-    "\n",
-    "print(toml.dumps(full_variant_config))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "25767188",
-   "metadata": {},
-   "source": [
-    "If you haven't, also include the embedding model in the config.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ea0d6e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "embedding_model_config = {\n",
-    "    \"embedding_models\": {\n",
-    "        DICL_EMBEDDING_MODEL: {\n",
-    "            \"routing\": [\"openai\"],\n",
-    "            \"providers\": {\n",
-    "                \"openai\": {\"type\": \"openai\", \"model_name\": DICL_EMBEDDING_MODEL}\n",
-    "            },\n",
-    "        }\n",
+    "    \"functions\": {\n",
+    "        FUNCTION_NAME: {\"variants\": {DICL_VARIANT_NAME: job_info.output[\"content\"]}}\n",
     "    }\n",
     "}\n",
     "\n",
-    "print(toml.dumps(embedding_model_config))"
+    "print(toml.dumps(full_variant_config))"
    ]
   }
  ],
