--- a/recipes/dicl/dicl.ipynb
+++ b/recipes/dicl/dicl.ipynb
@@ -115,6 +115,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5242f85f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorzero\n",
+    "\n",
+    "print(tensorzero.__version__)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2f053ba2",
    "metadata": {},
@@ -236,6 +248,7 @@
     "    data.append(\n",
     "        {\n",
     "            \"input\": str(inference.input),\n",
+    "            \"output\": str(inference.output),\n",
     "            \"embedding\": embedding,\n",
     "            \"function_name\": FUNCTION_NAME,\n",
     "            \"variant_name\": DICL_VARIANT_NAME,\n",
