use tensorzero embedding gateway

--- a/recipes/dicl/dicl.ipynb
+++ b/recipes/dicl/dicl.ipynb
@@ -20,7 +20,7 @@
     "This recipe allows TensorZero users to set up a dynamic in-context learning variant for any function.\n",
     "Since TensorZero automatically logs all inferences and feedback, it is straightforward to query a set of good examples and retrieve the most relevant ones to put them into context for future inferences.\n",
     "Since TensorZero allows users to add demonstrations for any inference it is also easy to include them in the set of examples as well.\n",
-    "This recipe will show use the OpenAI embeddings API only, but we are working towards support for all embedding providers over time as well.\n"
+    "This recipe will show use the OpenAI embeddings API only, but we have support for other embeddings providers as well.\n"
    ]
   },
   {
@@ -33,7 +33,8 @@
     "- Set the `TENSORZERO_CLICKHOUSE_URL` environment variable. For example: `TENSORZERO_CLICKHOUSE_URL=\"http://chuser:chpassword@localhost:8123/tensorzero\"`\n",
     "- Set the `OPENAI_API_KEY` environment variable.\n",
     "- Update the following parameters\n",
-    "- Uncomment query filters as appropriate\n"
+    "- Uncomment query filters as appropriate\n",
+    "- Add the embedding model to your tensorzero config if you have not already done so\n"
    ]
   },
   {
@@ -45,6 +46,7 @@
    "source": [
     "from typing import Optional\n",
     "\n",
+    "# Uncomment the embedding models section in this notebook\n",
     "CONFIG_PATH = \"../../examples/data-extraction-ner/config/tensorzero.toml\"\n",
     "\n",
     "FUNCTION_NAME = \"extract_entities\"\n",
@@ -57,7 +59,7 @@
     "# with other variants for the function selected above.\n",
     "DICL_VARIANT_NAME = \"gpt_4o_mini_dicl\"\n",
     "\n",
-    "# The model to use for the DICL variant.\n",
+    "# The model to use for the DICL variant. Should match the name of the embedding model defined in your config\n",
     "DICL_EMBEDDING_MODEL = \"text-embedding-3-small\"\n",
     "\n",
     "# The model to use for generation in the DICL variant.\n",
@@ -87,7 +89,7 @@
     "import toml\n",
     "from clickhouse_connect import get_client\n",
     "from openai import AsyncOpenAI\n",
-    "from tensorzero import TensorZeroGateway\n",
+    "from tensorzero import TensorZeroGateway, patch_openai_client\n",
     "from tensorzero.util import uuid7\n",
     "from tqdm.asyncio import tqdm_asyncio"
    ]
@@ -137,6 +139,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ah6b39u8thu",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "openai_client = await patch_openai_client(\n",
+    "    AsyncOpenAI(),\n",
+    "    clickhouse_url=os.environ[\"TENSORZERO_CLICKHOUSE_URL\"],\n",
+    "    config_file=CONFIG_PATH,\n",
+    "    async_setup=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "cb667f16",
    "metadata": {},
    "outputs": [],
@@ -172,16 +189,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc0283b6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "openai_client = AsyncOpenAI()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "cb9f7db6",
    "metadata": {},
    "outputs": [],
@@ -191,7 +198,9 @@
     ") -> Optional[list[float]]:\n",
     "    try:\n",
     "        async with semaphore:\n",
-    "            response = await openai_client.embeddings.create(input=text, model=model)\n",
+    "            response = await openai_client.embeddings.create(\n",
+    "                input=text, model=f\"tensorzero::embedding_model_name::{model}\"\n",
+    "            )\n",
     "            return response.data[0].embedding\n",
     "    except Exception as e:\n",
     "        print(f\"Error getting embedding: {e}\")\n",
@@ -221,7 +230,7 @@
     "    get_embedding(str(inference.input), semaphore, DICL_EMBEDDING_MODEL)\n",
     "    for inference in inferences\n",
     "]\n",
-    "embeddings = await tqdm_asyncio.gather(*tasks, desc=\"Embedding inputs\")"
+    "embeddings = await tqdm_asyncio.gather(*tasks[:1], desc=\"Embedding inputs\")"
    ]
   },
   {
