remove debugging limit

--- a/recipes/dicl/dicl.ipynb
+++ b/recipes/dicl/dicl.ipynb
@@ -230,7 +230,7 @@
     "    get_embedding(str(inference.input), semaphore, DICL_EMBEDDING_MODEL)\n",
     "    for inference in inferences\n",
     "]\n",
-    "embeddings = await tqdm_asyncio.gather(*tasks[:1], desc=\"Embedding inputs\")"
+    "embeddings = await tqdm_asyncio.gather(*tasks, desc=\"Embedding inputs\")"
    ]
   },
   {
