revert changes to examples

--- a/recipes/dicl/dicl.ipynb
+++ b/recipes/dicl/dicl.ipynb
@@ -33,8 +33,7 @@
     "- Set the `TENSORZERO_CLICKHOUSE_URL` environment variable. For example: `TENSORZERO_CLICKHOUSE_URL=\"http://chuser:chpassword@localhost:8123/tensorzero\"`\n",
     "- Set the `OPENAI_API_KEY` environment variable.\n",
     "- Update the following parameters\n",
-    "- Uncomment query filters as appropriate\n",
-    "- Add the embedding model to your tensorzero config if you have not already done so\n"
+    "- Uncomment query filters as appropriate\n"
    ]
   },
   {
@@ -61,6 +60,7 @@
     "\n",
     "# The model to use for the DICL variant. Should match the name of the embedding model defined in your config\n",
     "DICL_EMBEDDING_MODEL = \"text-embedding-3-small\"\n",
+    "DICL_EMBEDDING_PROVIDER = \"openai\"\n",
     "\n",
     "# The model to use for generation in the DICL variant.\n",
     "DICL_GENERATION_MODEL = \"gpt-4o-mini-2024-07-18\"\n",
@@ -92,6 +92,37 @@
     "from tensorzero import TensorZeroGateway, patch_openai_client\n",
     "from tensorzero.util import uuid7\n",
     "from tqdm.asyncio import tqdm_asyncio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b91a0e5",
+   "metadata": {},
+   "source": [
+    "Add the following embedding model config to the tensorzero config file you specified with `CONFIG_PATH` and spin up your gateway:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6449265",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_model_config = {\n",
+    "    \"type\": f\"{DICL_EMBEDDING_PROVIDER}\",\n",
+    "    \"model_name\": DICL_EMBEDDING_MODEL,\n",
+    "}\n",
+    "full_embedding_model_config = {\n",
+    "    \"embedding_models\": {\n",
+    "        DICL_EMBEDDING_MODEL: {\n",
+    "            \"routing\": [DICL_EMBEDDING_PROVIDER],\n",
+    "            \"providers\": {DICL_EMBEDDING_PROVIDER: embedding_model_config},\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "print(toml.dumps(full_embedding_model_config))"
    ]
   },
   {
