--- a/recipes/supervised_fine_tuning/axolotl/axolotl.ipynb
+++ b/recipes/supervised_fine_tuning/axolotl/axolotl.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "- Set your `TENSORZERO_CLICKHOUSE_URL` enironment variable to point to the database containing the historical inferences you'd like to train on.\n",
     "- Set your `HF_TOKEN` to use Llama or Gemma models downloaded through huggingface.\n",
-    "- You'll also need to [install](https://docs.fireworks.ai/tools-sdks/firectl/firectl) the CLI tool `firectl` on your machine and sign in with `firectl signin`. You can test that this all worked with `firectl whoami`.\n",
+    "- [Install](https://docs.fireworks.ai/tools-sdks/firectl/firectl) the CLI tool `firectl` on your machine and sign in with `firectl signin`. You can test that this all worked with `firectl whoami`. We use `firectl` for deployment to Fireworks in this example but you can serve the model however you prefer.\n",
     "- Update the following parameters:"
    ]
   },
