add documentation for model configs and clarify firectl instructions

--- a/recipes/supervised_fine_tuning/torchtune/torchtune.ipynb
+++ b/recipes/supervised_fine_tuning/torchtune/torchtune.ipynb
@@ -25,7 +25,7 @@
     "- Set your `TENSORZERO_CLICKHOUSE_URL` enironment variable to point to the database containing the historical inferences you'd like to train on.\n",
     "- Set your `HF_TOKEN` to use Llama or Gemma models downloaded through huggingface.\n",
     "- Set the environment variable `CHECKPOINT_HOME` to a path with sufficient storage to save the base LLM checkpoints.\n",
-    "- You'll also need to [install](https://docs.fireworks.ai/tools-sdks/firectl/firectl) the CLI tool `firectl` on your machine and sign in with `firectl signin`. You can test that this all worked with `firectl whoami`.\n",
+    "- You'll also need to [install](https://docs.fireworks.ai/tools-sdks/firectl/firectl) the CLI tool `firectl` on your machine and sign in with `firectl signin`. You can test that this all worked with `firectl whoami`. We use `firectl` for deployment to Fireworks in this example but you can serve the model however you prefer.\n",
     "- Update the following parameters:"
    ]
   },
@@ -61,7 +61,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Select a model to fine tune"
+    "Select a [supported model](https://docs.pytorch.org/torchtune/main/api_ref_models.html) to fine tune.\n",
+    "\n",
+    "\n",
+    "If you want to use a supported model that we have not yet included in the MODELS dictionary in utils.py, you will need to update the dictionary.\n",
+    "\n",
+    "Alternatively, you can write the `TUNING_CONFIG` defined below from scratch following the [example configs](https://github.com/pytorch/torchtune/tree/main/recipes/configs) provided by torchtune."
    ]
   },
   {
@@ -70,8 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The name of the model to fine-tune (supported models: https://docs.pytorch.org/torchtune/main/api_ref_models.html)\n",
-    "# You may need to update the MODELS dictionary in utils.py if you want to use a model that we have not yet included there\n",
+    "# The name of the model to fine-tune.\n",
     "MODEL_NAME = \"meta-llama/Meta-Llama-3.1-8B-Instruct\"\n",
     "\n",
     "# Whether to use LoRA or not. Set to False for full model fine-tuning\n",
