use experimental_rendered_samples, address warnings, update tensorzero

--- a/recipes/supervised_fine_tuning/axolotl/axolotl.ipynb
+++ b/recipes/supervised_fine_tuning/axolotl/axolotl.ipynb
@@ -276,7 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stored_inferences = tensorzero_client.experimental_list_inferences(\n",
+    "stored_samples = tensorzero_client.experimental_list_inferences(\n",
     "    function_name=FUNCTION_NAME,\n",
     "    variant_name=None,\n",
     "    output_source=\"inference\",  # could also be \"demonstration\"\n",
@@ -298,8 +298,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rendered_samples = tensorzero_client.experimental_render_inferences(\n",
-    "    stored_inferences=stored_inferences,\n",
+    "rendered_samples = tensorzero_client.experimental_render_samples(\n",
+    "    stored_samples=stored_samples,\n",
     "    variants={FUNCTION_NAME: TEMPLATE_VARIANT_NAME},\n",
     ")"
    ]
@@ -423,6 +423,7 @@
     "            \"data_files\": [str(val_json_path)],\n",
     "        }\n",
     "    ]\n",
+    "    TUNE_CONFIG[\"dataset_prepared_path\"] = str(temp_dir / \"prepared\")\n",
     "    with open(config_path, \"w\") as fp:\n",
     "        yaml.safe_dump(\n",
     "            TUNE_CONFIG,\n",
@@ -431,6 +432,17 @@
     "            default_flow_style=False,  # expand lists/dicts in block style\n",
     "        )\n",
     "    print(f\"Config written to {config_path}\")\n",
+    "    # preprocess dataset\n",
+    "    command = [\n",
+    "        \"axolotl\",\n",
+    "        \"preprocess\",\n",
+    "        str(config_path),\n",
+    "    ]\n",
+    "    try:\n",
+    "        subprocess.run(command, check=True)\n",
+    "    except subprocess.CalledProcessError as e:\n",
+    "        print(\"Error occurred:\", e.stderr)\n",
+    "    # train\n",
     "    command = [\n",
     "        \"axolotl\",\n",
     "        \"train\",\n",
