Recipes: DICL with tensorzero embedding gateway (#3358)
* use tensorzero embedding gateway

* remove debugging limit

* revert changes to examples

* go back to original

* revert requirements and uv.lock

* remove comment

--- a/recipes/dicl/dicl.ipynb
+++ b/recipes/dicl/dicl.ipynb
@@ -20,7 +20,7 @@
     "This recipe allows TensorZero users to set up a dynamic in-context learning variant for any function.\n",
     "Since TensorZero automatically logs all inferences and feedback, it is straightforward to query a set of good examples and retrieve the most relevant ones to put them into context for future inferences.\n",
     "Since TensorZero allows users to add demonstrations for any inference it is also easy to include them in the set of examples as well.\n",
-    "This recipe will show use the OpenAI embeddings API only, but we are working towards support for all embedding providers over time as well.\n"
+    "This recipe will show use the OpenAI embeddings API only, but we have support for other embeddings providers as well.\n"
    ]
   },
   {
@@ -57,8 +57,9 @@
     "# with other variants for the function selected above.\n",
     "DICL_VARIANT_NAME = \"gpt_4o_mini_dicl\"\n",
     "\n",
-    "# The model to use for the DICL variant.\n",
+    "# The model to use for the DICL variant. Should match the name of the embedding model defined in your config\n",
     "DICL_EMBEDDING_MODEL = \"text-embedding-3-small\"\n",
+    "DICL_EMBEDDING_PROVIDER = \"openai\"\n",
     "\n",
     "# The model to use for generation in the DICL variant.\n",
     "DICL_GENERATION_MODEL = \"gpt-4o-mini-2024-07-18\"\n",
@@ -87,9 +88,40 @@
     "import toml\n",
     "from clickhouse_connect import get_client\n",
     "from openai import AsyncOpenAI\n",
-    "from tensorzero import TensorZeroGateway\n",
+    "from tensorzero import TensorZeroGateway, patch_openai_client\n",
     "from tensorzero.util import uuid7\n",
     "from tqdm.asyncio import tqdm_asyncio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b91a0e5",
+   "metadata": {},
+   "source": [
+    "Add the following embedding model config to the tensorzero config file you specified with `CONFIG_PATH` and spin up your gateway:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6449265",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_model_config = {\n",
+    "    \"type\": f\"{DICL_EMBEDDING_PROVIDER}\",\n",
+    "    \"model_name\": DICL_EMBEDDING_MODEL,\n",
+    "}\n",
+    "full_embedding_model_config = {\n",
+    "    \"embedding_models\": {\n",
+    "        DICL_EMBEDDING_MODEL: {\n",
+    "            \"routing\": [DICL_EMBEDDING_PROVIDER],\n",
+    "            \"providers\": {DICL_EMBEDDING_PROVIDER: embedding_model_config},\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "print(toml.dumps(full_embedding_model_config))"
    ]
   },
   {
@@ -137,6 +169,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ah6b39u8thu",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "openai_client = await patch_openai_client(\n",
+    "    AsyncOpenAI(),\n",
+    "    clickhouse_url=os.environ[\"TENSORZERO_CLICKHOUSE_URL\"],\n",
+    "    config_file=CONFIG_PATH,\n",
+    "    async_setup=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "cb667f16",
    "metadata": {},
    "outputs": [],
@@ -172,16 +219,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc0283b6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "openai_client = AsyncOpenAI()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "cb9f7db6",
    "metadata": {},
    "outputs": [],
@@ -191,7 +228,9 @@
     ") -> Optional[list[float]]:\n",
     "    try:\n",
     "        async with semaphore:\n",
-    "            response = await openai_client.embeddings.create(input=text, model=model)\n",
+    "            response = await openai_client.embeddings.create(\n",
+    "                input=text, model=f\"tensorzero::embedding_model_name::{model}\"\n",
+    "            )\n",
     "            return response.data[0].embedding\n",
     "    except Exception as e:\n",
     "        print(f\"Error getting embedding: {e}\")\n",
