docs: update chain-of-thought diagram
This was incorrectly reusing the diagram for best-of-n sampling.

--- a/docs/gateway/guides/inference-time-optimizations.mdx
+++ b/docs/gateway/guides/inference-time-optimizations.mdx
@@ -82,7 +82,7 @@ This example showcases how best-of-N sampling can significantly enhance an LLM's
 ## Chain-of-Thought (CoT)
 
 <img
-  src="./inference-time-optimizations-best-of-n-sampling.png"
+  src="./inference-time-optimizations-chain-of-thought.svg"
   alt="Inference-Time Optimization: Chain-of-Thought (CoT)"
   height={480}
 />
