--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -120,6 +120,8 @@ services:
       - CLICKHOUSE_PASSWORD=chpassword
     ports:
       - "8123:8123"
+    volumes:
+      - clickhouse-data:/var/lib/clickhouse
     healthcheck:
       test: wget --spider --tries 1 http://chuser:chpassword@clickhouse:8123/ping
       start_period: 30s
@@ -163,6 +165,9 @@ services:
     depends_on:
       clickhouse:
         condition: service_healthy
+
+volumes:
+  clickhouse-data:
 ```
 
 </Accordion>
