Update DICL notebook

--- a/recipes/dicl/dicl.ipynb
+++ b/recipes/dicl/dicl.ipynb
@@ -60,10 +60,10 @@
     "# The model to use for the DICL variant. Should match the name of the embedding model defined in your config\n",
     "DICL_EMBEDDING_MODEL = \"openai::text-embedding-3-small\"\n",
     "\n",
-    "# The model to use for generation in the DICL variant.\n",
-    "DICL_GENERATION_MODEL = \"openai::gpt-4.1-nano-2025-04-14\"\n",
+    "# The model to use for generation in the DICL variant\n",
+    "DICL_GENERATION_MODEL = \"openai::gpt-4o-2024-08-06\"\n",
     "\n",
-    "# The number of examples to retrieve for the DICL variant.\n",
+    "# The number of examples to retrieve for the DICL variant\n",
     "DICL_K = 10\n",
     "\n",
     "# If the metric is a float metric, you can set the threshold to filter the data\n",
