Add programmatic DICL example

--- a/examples/optimization/dicl/dicl.ipynb
+++ b/examples/optimization/dicl/dicl.ipynb
@@ -329,8 +329,7 @@
     "At the time of writing, the DICL variant materially outperforms the baseline variant:\n",
     "\n",
     "- False Positives: 37 → 7\n",
-    "- False Negatives: 7 → 0\n",
-    "\n"
+    "- False Negatives: 7 → 0"
    ]
   }
  ],
