Document batch writes; revamp performance guide

--- a/docs/gateway/deployment.mdx
+++ b/docs/gateway/deployment.mdx
@@ -187,6 +187,12 @@ cargo run --profile performance --bin gateway -- path/to/your/tensorzero.toml
 
 </Accordion>
 
+<Tip>
+
+See the [optimizing latency and throughput](/gateway/optimize-latency-and-throughput/) guide to learn how to configure the gateway for high-performance deployments.
+
+</Tip>
+
 ### Command Line Arguments
 
 The TensorZero Gateway requires either `--config-file` to specify a custom configuration file (e.g. `--config-file /path/to/tensorzero.toml`) or `--default-config` to use default settings (i.e. no custom functions, metrics, etc.). You can also use `--log-format` to set the logging format to either `pretty` (default) or `json`.
