--- a/docs/gateway/optimize-latency-and-throughput.mdx
+++ b/docs/gateway/optimize-latency-and-throughput.mdx
@@ -13,7 +13,7 @@ The TensorZero Gateway can achieve &lt;1ms P99 latency overhead at 10,000+ QPS. 
 
 </Tip>
 
-## Best Practices
+## Best practices
 
 ### Observability data collection strategy
 
