Clean up links in docs

--- a/docs/gateway/index.mdx
+++ b/docs/gateway/index.mdx
@@ -31,7 +31,7 @@ The TensorZero Gateway is a high-performance model gateway that provides a unifi
 
   <Tip>
 
-  Learn more in our [How to call any LLM](./call-any-llm) guide.
+  Learn more in our [How to call any LLM](/gateway/call-any-llm) guide.
 
   </Tip>
 
