--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -7,7 +7,7 @@ This Quickstart guide shows how we'd upgrade an OpenAI wrapper to a minimal Tens
 From there, you can take advantage of dozens of features to build best-in-class LLM applications.
 
 This Quickstart covers a tour of TensorZero features.
-If you're only interested in inference with the gateway, see the shorter [How to call any LLM](./gateway/call-any-llm) guide.
+If you're only interested in inference with the gateway, see the shorter [How to call any LLM](/gateway/call-any-llm) guide.
 
 <Tip>
 
