--- a/docs/gateway/deployment.mdx
+++ b/docs/gateway/deployment.mdx
@@ -18,63 +18,14 @@ See the [TensorZero UI Deployment Guide](/ui/deployment/) for more details on ho
 
 </Tip>
 
-## ClickHouse
+## ClickHouse (optional)
 
-The TensorZero Gateway stores inference and feedback data in a ClickHouse database.
-This data is later used for model observability, experimentation, and optimization.
-
-### Development
-
-For development purposes, you can run a single-node ClickHouse instance locally (e.g. using Homebrew or Docker) or a cheap `Development`-tier cluster on ClickHouse Cloud.
-
-See the <a href="https://clickhouse.com/docs/en/install" target="_blank">ClickHouse documentation</a> for more details on configuring your ClickHouse deployment.
-
-### Production
-
-#### Managed Services
-
-For production deployments, the easiest setup is to use a managed service like <a href="https://clickhouse.com/cloud" target="_blank">ClickHouse Cloud</a>.
-
-ClickHouse Cloud is also available through the <a href="https://aws.amazon.com/marketplace/pp/prodview-jettukeanwrfc" target="_blank">AWS Marketplace</a>, <a href="https://console.cloud.google.com/marketplace/product/clickhouse-public/clickhouse-cloud" target="_blank">GCP Marketplace</a>, and <a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/clickhouse.clickhouse_cloud" target="_blank">Azure Marketplace</a>.
-
-Other options for managed ClickHouse deployments include <a href="https://www.tinybird.co/" target="_blank">Tinybird</a> (serverless) and <a href="https://www.altinity.com/" target="_blank">Altinity</a> (hands-on support).
-
-#### Self-Managed Deployment
-
-You can alternatively run your own self-managed ClickHouse instance or cluster.
-
-<Warning>
-
-The TensorZero Gateway does _not_ automatically enable data replication for ClickHouse tables.
-
-If you are using a _self-managed distributed_ ClickHouse deployment, you must set up replication yourself.
-See the ClickHouse [replication documentation](https://clickhouse.com/docs/en/engines/table-engines/mergetree-family/replication#converting-from-mergetree-to-replicatedmergetree) for more details.
-
-ClickHouse Cloud automatically sets up data replication, so this step is not necessary if you're using the managed service.
-
-</Warning>
-
-### Configuration
+The TensorZero Gateway can optionally collect inference and feedback data for observability, optimization, evaluations, and experimentation.
 
 After setting up your database, you need to configure the `TENSORZERO_CLICKHOUSE_URL` environment variable with the connection details.
-The variable takes a standard format.
+See the [Deploy ClickHouse](/deployment/deploy-clickhouse) guide for details.
 
-```bash title=".env"
-TENSORZERO_CLICKHOUSE_URL="http[s]://[username]:[password]@[hostname]:[port]/[database]"
-
-# Example: ClickHouse running locally
-TENSORZERO_CLICKHOUSE_URL="http://chuser:chpassword@localhost:8123/tensorzero"
-
-# Example: ClickHouse Cloud
-TENSORZERO_CLICKHOUSE_URL="https://USERNAME:PASSWORD@XXXXX.clickhouse.cloud:8443/tensorzero"
-
-# Example: TensorZero Gateway running in a container, ClickHouse running on host machine
-TENSORZERO_CLICKHOUSE_URL="http://host.docker.internal:8123/tensorzero"
-```
-
-The TensorZero Gateway automatically applies database migrations on startup.
-
-See `[gateway]` in the [Configuration Reference](/gateway/configuration-reference/) for the relevant configuration (e.g. customizing the port).
+See `[gateway.observability]` in the [Configuration Reference](/gateway/configuration-reference/) for the relevant configuration (e.g. customizing the port).
 
 <Accordion title="Disabling Observability (Not Recommended)">
 
