Update the gateway deployment guide

--- a/docs/gateway/guides/providers/aws-sagemaker.mdx
+++ b/docs/gateway/guides/providers/aws-sagemaker.mdx
@@ -25,7 +25,7 @@ You can also find the complete code for this example on [GitHub](https://github.
 
 </Tip>
 
-For production deployments, see our [Deployment Guide](/gateway/deployment/).
+For production deployments, see our [Deployment Guide](/deployment/tensorzero-gateway/).
 
 You'll also need to deploy a SageMaker endpoint for your LLM model.
 For this example, we're using a container running Ollama.
