--- a/docs/gateway/guides/providers/hyperbolic.mdx
+++ b/docs/gateway/guides/providers/hyperbolic.mdx
@@ -54,7 +54,7 @@ You can also find the complete code for this example on [GitHub](https://github.
 
 </Tip>
 
-For production deployments, see our [Deployment Guide](/gateway/deployment/).
+For production deployments, see our [Deployment Guide](/deployment/tensorzero-gateway/).
 
 ### Configuration
 
