--- a/docs/ui/deployment.mdx
+++ b/docs/ui/deployment.mdx
@@ -9,7 +9,7 @@ It's easy to get started with the TensorZero UI.
 
 <Tip>
 
-See the [TensorZero Gateway Deployment Guide](/gateway/deployment/) for more details on how to deploy the gateway and ClickHouse database.
+See the [TensorZero Gateway Deployment Guide](/deployment/tensorzero-gateway/) for more details on how to deploy the gateway and ClickHouse database.
 
 </Tip>
 
@@ -18,7 +18,7 @@ See the [TensorZero Gateway Deployment Guide](/gateway/deployment/) for more det
 To use the TensorZero UI, you only need your ClickHouse database URL (`TENSORZERO_CLICKHOUSE_URL`) and TensorZero Gateway URL (`TENSORZERO_GATEWAY_URL`).
 Optionally, you can also provide credentials for fine-tuning APIs.
 
-See the [Deploy ClickHouse](/deployment/deploy-clickhouse) guide for more details.
+See the [Deploy ClickHouse](/deployment/clickhouse) guide for more details.
 
 ### Credentials for Fine-tuning
 
