Update UI deployment

--- a/docs/deployment/tensorzero-gateway.mdx
+++ b/docs/deployment/tensorzero-gateway.mdx
@@ -4,7 +4,7 @@ description: Learn how to deploy and customize the TensorZero Gateway.
 ---
 
 The TensorZero Gateway is the core component that handles inference requests and collects observability data.
-This guide will walk you through deploying the gateway to get your TensorZero system up and running.
+It's easy to get started with the TensorZero Gateway.
 
 <Note>
 
